# Security

./: .gitignore  CMakeLists.txt  README.md  a_file.txt.enc
include/: command.hpp  credentials.hpp  decrypt.hpp  encrypt.hpp  encrypt_decrypt.hpp
src/: command.cpp  credentials.cpp  decrypt.cpp  encrypt.cpp  encrypt_decrypt.cpp  main.cpp
tests/: test_security.cpp
